yamls/vs/main-vs.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-ingress-vs
spec:
  hosts:
  - "*"
  gateways:
  - spring-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /logincheck
    - uri:
        prefix: /front
    - uri:
        prefix: /proj
    - uri:
        prefix: /todo
    - uri:
        prefix: /static
    - uri:
        prefix: /login
    - uri:
        prefix: /notice_list
    route:
    - destination:
        host: spring-main
        subset: v1
        port:
          number: 8000
    timeout: 15s
    retries:
      attempts: 3
      perTryTimeout: 1s
---
