yamls/vs/vs-all.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-ingress-vs
spec:
  hosts:
  - "*"
  gateways:
  - spring-ingress-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /logincheck
    - uri:
        prefix: /front
    - uri:
        prefix: /proj
    - uri:
        prefix: /todo
    - uri:
        prefix: /static
    - uri:
        prefix: /login
    - uri:
        prefix: /notice_list
    route:
    - destination:
        host: spring-main.istio.svc.cluster.local
        subset: v1
        port:
          number: 8000
    timeout: 15s
    #retries:
    #  attempts: 3
    #  perTryTimeout: 1s
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-todo
spec:
  hosts:
  - spring-todo
  http:
  #- fault:
  #    abort:
  #      httpStatus: 500
  #      percentage: 
  #        value: 100
  - route:
    - destination:
        host: spring-todo
        subset: v1
      weight: 100
    - destination:
        host: spring-todo
        subset: v2
      weight: 0
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-proj
spec:
  hosts:
  - spring-proj
  http:
  - route:
    - destination:
        host: spring-proj
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-login
spec:
  hosts:
  - spring-login
  http:
  - route:
    - destination:
        host: spring-login
        subset: v1
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: spring-chat
spec:
  hosts:
  - spring-chat
  http:
  - route:
    - destination:
        host: spring-chat
        subset: v1
